...
      android:layout_height="wrap_content"
      android:text="@string/coins"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="@+id/txt_balance"
      app:layout_constraintEnd_toStartOf="@+id/txt_balance"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/btn_die"
      app:layout_constraintTop_toTopOf="@+id/txt_balance" />


  <TextView
      android:id="@+id/txt_balance"
      android:layout_width="wrap_content"
...
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />



  <Button
      android:id="@+id/btn_launch_twoormore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/launch_two_or_more"
      android:textColor="#212121"
      app:layout_constraintEnd_toEndOf="parent"
...
